syntax = "proto3";
package pb;
option go_package = "./pb";

message Card {
  string id = 1;
  string number = 2;
  string brand = 3;
  int32 exp_month = 4;
  int32 exp_year = 5;
}

// CARD SECTION
message AddCardRequest {
  string uid = 1;
  Card card = 2;
}
message AddCardResponse { repeated Card card = 1; }

message GetCardsRequest { string uid = 1; }
message GetCardsResponse { repeated Card card = 1; }

message RemoveCardRequest {
  string id = 1;
  string uid = 2;
}
message RemoveCardResponse { string msg = 1; }

message DeleteCardsRequest { string uid = 1; }
message DeleteCardsResponse { string msg = 1; }

service CardService {
  rpc AddCard(AddCardRequest) returns (AddCardResponse);
  rpc GetCards(GetCardsRequest) returns (GetCardsResponse);
  rpc RemoveCard(RemoveCardRequest) returns (RemoveCardResponse);
  rpc DeleteCards(DeleteCardsRequest) returns (DeleteCardsResponse);
}